fix detalle producto

--- a/Web/Views/Producto/Details.cshtml
+++ b/Web/Views/Producto/Details.cshtml
@@ -11,36 +11,74 @@
 
 <div>
     <div class="content">
-        <div class="row row-cols-2 g-3">
+        <div class="row g-3">
             <div class="col">
-                <div class="card mb-3" style="max-width: auto;">
-                    <div class="row g-0">
-                        <div class="col-md-4">
+                <div class=" mb-3" style="max-width: auto;">
+                    <div class="row g-0 d-flex flex-row">
+                        <div class="col-md-6 d-flex justify-content-center align-items-center">
                             <img src="data:image/jpeg;charset=utf-8;base64,@Convert.ToBase64String(Model.Imagen)"
                                  alt="Libro @Html.DisplayFor(model => model.Nombre)"
-                                 class="img-fluid rounded-start" />
+                                 class="img-fluid rounded-start imagen-detalle " />
+  
                         </div>
-                        <div class="col-md-8">
-                            <div class="card-body">
-                                <span class="card-title" style="font-size: 25px; font-weight: 500; line-height: 1.2">@Html.DisplayFor(model => model.Nombre)</span>
 
+
+
+
+                        <div class="col-md-6">
+
+
+                            <div class="details">
                                 <p class="card-text">
-                                    <i class="fa-solid fa-box"> </i> <b>@Html.DisplayNameFor(model => model.Descripcion):</b>  @Html.DisplayFor(model => model.Descripcion)
+                                    <span class="card-title text-black">@Html.DisplayFor(model => model.Nombre)</span>
                                 </p>
-                                <p class="card-text" style="color: #E45641; font-weight: 500;">
-                                    @Html.DisplayFor(model => model.Precio)
+                                <p class="card-text">
+                                    <i class="fa-solid fa-box detail-descrip">  @Html.DisplayFor(model => model.Descripcion)</i>
                                 </p>
+
                                 <p class="card-text">
                                     <i class="fa-solid fa-box"> </i> <b>@Html.DisplayNameFor(model => model.Estado):</b>  @Html.DisplayFor(model => model.Estado)
                                 </p>
                                 <p class="card-text">
-                                    <i class="fa-solid fa-circle-user"></i> <b>@Html.DisplayNameFor(model => model.Tienda):</b>    @Html.DisplayFor(model => model.Tienda.NombreProveedor)
+                                    <i class="fa-solid fa-box">SKU: </i> <i class="">@Html.DisplayFor(model => model.Id)</i>
                                 </p>
+
+                                @*<p class="card-text">
+            <i class="fa-solid fa-circle-user"></i> <b>@Html.DisplayNameFor(model => model.Tienda):</b>    @Html.DisplayFor(model => model.Tienda.NombreProveedor)
+        </p>*@
                                 <p class="card-text">
                                     <i class="fa-solid fa-bookmark"></i> <b>@Html.DisplayNameFor(model => model.Categoria):</b> @Html.DisplayFor(model => model.Categoria.nombre)
-
+                                </p>
+                                <p class="card-text fw-bold precio" style="color: #2596be; font-weight: 500;">
+                                    $@Html.DisplayFor(model => model.Precio)
                                 </p>
                             </div>
+                            <hr class="te_s_hr_line bg-black" />
+
+                            <div class="row">
+                                <div class="logo-detail ">
+                                    <img src="~/Content/Images/logo.png" />
+                                </div>
+                                <div class="col-md-10">
+                                    <span class="slogan-detail mb-3" style="margin-bottom:5rem">Producimos y comercializamos la marca 
+                                    <b class="fw-bold">@Html.DisplayFor(model => model.Tienda.NombreProveedor)</b> 
+                                    para los productos de mayor producción agropecuaria, productos destinados para fincas y granjas donde se esperan rendimientos de mercado.
+                                    </span>
+                                    <button style="margin-top:1rem">
+
+                                    @Html.ActionLink("Ver productos", "Index", "Home", null, new { @class = "button-productos" })
+                                    </button>
+                                </div>
+                            </div>
+
+                            <hr class="te_s_hr_line bg-black" />
+
+                            <ul class="d-flex text-decoration-none custom-list">
+                                <li><span class="material-symbols-outlined"> <span class="material-symbols-outlined">local_shipping</span> </span>Envíos a todo el país</li>
+                                <li><span class="material-symbols-outlined">payments</span>Ver nuestra política de devoluciones</li>
+                            </ul>
+
+
                         </div>
                     </div>
                 </div>
