--- a/Web/Views/Producto/_Productos.cshtml
+++ b/Web/Views/Producto/_Productos.cshtml
@@ -46,7 +46,27 @@
                         </div>
                     </div>
 
-
+                    <div class="mb-3">
+                        <label for="categoria">Proveedo:</label>
+                        <div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="categoria" id="categoria-todos" value="" checked>
+                                <label class="form-check-label" for="categoria-todos">Todos</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="categoria" id="categoria-medicamentos" value="medicamentos">
+                                <label class="form-check-label" for="categoria-medicamentos"> Medicamentos </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="categoria" id="categoria-alimentos" value="alimentos">
+                                <label class="form-check-label" for="categoria-alimentos">Alimentos</label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="categoria" id="categoria-suministros" value="suministros">
+                                <label class="form-check-label" for="categoria-suministros">Suministros</label>
+                            </div>
+                        </div>
+                    </div>
 
 
 
@@ -66,9 +86,9 @@
                 <div class="col-md-3 ">
                     <div class="card carta-sombra" style="max-width:210px">
                         <img src="data:image/png;base64,@Convert.ToBase64String(item.Imagen)"
-                             alt="Imagen @Html.DisplayFor(modelItem => item.Descripcion)" class="zoom-img" />
+                             alt="Imagen @Html.DisplayFor(modelItem => item.Nombre)" class="zoom-img" />
                             <div class="card-body">
-                                <h5 class="card-title fw-bold text-black"> @Html.DisplayFor(modelItem => item.Descripcion) </h5>
+                                <h5 class="card-title fw-bold text-black"> @Html.DisplayFor(modelItem => item.Nombre) </h5>
 
                                 <p class="card-text">Precio: $@Html.DisplayFor(modelItem => item.Precio)</p>
                                 <div class="btn-group d-flex" role="group">
