--- a/Web/Views/Producto/_Productos.cshtml
+++ b/Web/Views/Producto/_Productos.cshtml
@@ -47,23 +47,15 @@
                     </div>
 
                     <div class="mb-3">
-                        <label for="categoria">Proveedo:</label>
+                        <label for="proveedor">Proveedor:</label>
                         <div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="categoria" id="categoria-todos" value="" checked>
-                                <label class="form-check-label" for="categoria-todos">Todos</label>
+                                <input class="form-check-input" type="radio" name="proveedor" id="proveedor-todos" value="" checked>
+                                <label class="form-check-label" for="proveedor-todos">Todos</label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="categoria" id="categoria-medicamentos" value="medicamentos">
-                                <label class="form-check-label" for="categoria-medicamentos"> Medicamentos </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="categoria" id="categoria-alimentos" value="alimentos">
-                                <label class="form-check-label" for="categoria-alimentos">Alimentos</label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="categoria" id="categoria-suministros" value="suministros">
-                                <label class="form-check-label" for="categoria-suministros">Suministros</label>
+                                <input class="form-check-input" type="radio" name="proveedor" id="proveedor-medicamentos" value="medicamentos">
+                                <label class="form-check-label" for="proveedor-medicamentos"> Veterinaria CyV </label>
                             </div>
                         </div>
                     </div>
