--- a/Web/Views/Shared/_SideBar.cshtml
+++ b/Web/Views/Shared/_SideBar.cshtml
@@ -13,13 +13,19 @@
         <div href="#" class="active">
             <span class="material-symbols-outlined"> grid_view </span>
             @Html.ActionLink("Dashboard", "DashboardTienda", "Home", null, new { @class = "primary" })
-        
+
 
 
         </div>
         <div>
             <span class="material-symbols-outlined"> inventory </span>
             @Html.ActionLink("Products", "ProductoTienda", "Producto", null, new { @class = "" })
+            @*<h3>Products</h3>*@
+        </div>
+
+        <div>
+            <span class="material-symbols-outlined"> inventory </span>
+            @Html.ActionLink("Productos Admin", "ProductoAdmin", "Producto", null, new { @class = "" })
             @*<h3>Products</h3>*@
         </div>
 
