--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,11 @@
 <body>
     @Html.Partial("_Menu")
     <div class="">
+
+
         @RenderBody()
+
+
         <hr />
         @*<footer>
                 <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
@@ -35,6 +39,22 @@
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/bootstrap.bundle.js"></script>
     <script src="~/Scripts/script.js"></script>
+
+
+    <link href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.min.css" rel="stylesheet" />
+    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+
+        <script>
+        $(document).ready(function () {
+            $('#tb_producto').DataTable();
+        });
+    </script>
+
+    
+
+
+
+
 
 </body>
 </html>
