Avance 3 menos las preguntas

--- a/Web/Views/Compra/CompraCliente.cshtml
+++ b/Web/Views/Compra/CompraCliente.cshtml
@@ -27,7 +27,7 @@
             {
                 <tr>
                     <td>@Html.DisplayFor(model => item.Id)</td>
-                    <td>26/08/200</td>
+                    <td>@Html.DisplayFor(model => item.FechaHora)</td>
                     @*<td>@Html.DisplayFor(model => item.Observaciones)</td>
                         <td>@Html.DisplayFor(model => item.Direccion)</td>*@
                     @if (item.Estado == 3)
