--- a/Web/Views/Shared/_Menu.cshtml
+++ b/Web/Views/Shared/_Menu.cshtml
@@ -14,7 +14,7 @@
                 @Html.ActionLink("Contacto", "Contact", "Home", null, new { @class = "nav-link" })
             </li>
             <li>
-                <a href="@Url.Action("Index", "Compra")" class="icon-link">
+                <a href="@Url.Action("CompraCliente", "Compra")" class="icon-link">
                     @Html.Raw("<span class='material-symbols-outlined icon-large'>shopping_bag</span>")
                 </a>
             </li>
