--- a/Web/Views/Shared/_SideBar.cshtml
+++ b/Web/Views/Shared/_SideBar.cshtml
@@ -25,6 +25,12 @@
 
         <div>
             <span class="material-symbols-outlined"> inventory </span>
+            @Html.ActionLink("Pedidos Tienda", "CompraTienda", "Compra", null, new { @class = "" })
+            @*<h3>Products</h3>*@
+        </div>
+
+        <div>
+            <span class="material-symbols-outlined"> inventory </span>
             @Html.ActionLink("Productos Admin", "ProductoAdmin", "Producto", null, new { @class = "" })
             @*<h3>Products</h3>*@
         </div>
